@startuml

title __RESERVATION-SYSTEM's Class Diagram__\n

  namespace com.reservation_system {
    class com.reservation_system.ReservationSystemApplication {
    }
  }
  

  namespace com.reservation_system {
    namespace config {
      class com.reservation_system.config.WebSecurityConfig {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace controller {
      class com.reservation_system.controller.HomeController {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace model {
      enum AmenityType {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace model {
      class com.reservation_system.model.Reservation {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace model {
      class com.reservation_system.model.User {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace repos {
      interface com.reservation_system.repos.ReservationRepository {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace repos {
      interface com.reservation_system.repos.UserRepository {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace service {
      class com.reservation_system.service.ReservationService {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace service {
      class com.reservation_system.service.UserDetailsServiceImpl {
      }
    }
  }
  

  namespace com.reservation_system {
    namespace service {
      class com.reservation_system.service.UserService {
      }
    }
  }
  

  com.reservation_system.config.WebSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.reservation_system.config.WebSecurityConfig o-- com.reservation_system.service.UserDetailsServiceImpl : userDetailsService
  com.reservation_system.controller.HomeController o-- com.reservation_system.service.ReservationService : reservationService
  com.reservation_system.controller.HomeController o-- com.reservation_system.service.UserService : userService
  com.reservation_system.model.Reservation o-- com.reservation_system.model.AmenityType : amenityType
  com.reservation_system.model.Reservation o-- com.reservation_system.model.User : user
  com.reservation_system.service.ReservationService o-- com.reservation_system.repos.ReservationRepository : reservationRepository
  com.reservation_system.service.ReservationService o-- com.reservation_system.repos.UserRepository : userRepository
  com.reservation_system.service.UserDetailsServiceImpl .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.reservation_system.service.UserDetailsServiceImpl o-- com.reservation_system.repos.UserRepository : userRepository
  com.reservation_system.service.UserService o-- com.reservation_system.repos.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
